# snowflake-automata-cpp

./: CMakeLists.txt  index.html  library.cpp  library.h
